# initial-final

./: README.md  cabal.project  default.nix  initial-final.cabal  shell.nix
analysis/: allstrict.dump  bench-fast.html  bench-nicerules.html  bench-noinline.html  bench-strict.html  bench.html  final-bp.dump  final.dump  initial-bp.dump  initial.dump  litstrict.dump  nostrict.dump  out-noinline.dump  out-strict.dump  out.dump  performance-allstrict.html  performance-litstrict.html  performance-no-inline.html  performance-nostrict.html  performance.html  strictall.dump  vanilla.dump
bench/: Main.hs  bench.cabal  bench.nix  default.nix
blog/drafts/: backpack-for-initial-and-final-encodings.md  post.md
blog/posts/: backpack-for-initial-and-final-encodings.md
final/: README.md  default.nix  final.cabal  final.nix  shell.nix
final-bp/: Final.hsig  README.md  default.nix  final-bp.cabal  final-bp.nix  shell.nix
final-bp-base/: Base.hsig
final-bp-base-eval/Base/: Eval.hs
final-bp-base-print/: Base.hs
final-bp-base-print/Base/: Print.hs
final-bp-eval/: Eval.hs  Final.hs
final-bp-example-base/Example/: Base.hs
final-bp-example-eval/Example/: Eval.hs
final-bp-example-mul/Example/: Mul.hs
final-bp-example-print/Example/: Print.hs
final-bp-mul/: Mul.hsig
final-bp-mul-eval/Mul/: Eval.hs
final-bp-mul-print/Mul/: Print.hs
final-bp-print/: Final.hs  Print.hs
final-bp/final-bp-base-eval/: Base.hs
final-bp/final-bp-base-sig/: Base.hsig
final-bp/final-bp-eval/: Repr.hs
final-bp/final-bp-example-base/Example/: Base.hs
final-bp/final-bp-example-eval/Example/: Eval.hs
final-bp/final-bp-example-mul/Example/: Mul.hs
final-bp/final-bp-mul-eval/: Mul.hs
final-bp/final-bp-mul-print/: Mul.hs
final-bp/final-bp-mul-sig/: Mul.hsig
final-bp/final-bp-print/: Repr.hs
final-bp/final-bp-repr-sig/: Repr.hsig
final-bp/src/FinalBP/: Bench.hs
final-gadt/: final-bp.cabal
final-gadt/final-bp-base-eval/: Base.hs
final-gadt/final-bp-base-print/: Base.hs
final-gadt/final-bp-base-sig/: Base.hsig
final-gadt/final-bp-eval/: Repr.hs
final-gadt/final-bp-example-base/Example/: Base.hs
final-gadt/final-bp-example-mul/Example/: Mul.hs
final-gadt/final-bp-example-print/Example/: Print.hs
final-gadt/final-bp-mul-eval/: Mul.hs
final-gadt/final-bp-mul-sig/: Mul.hsig
final-gadt/final-bp-repr-sig/: Repr.hsig
final-gadt/src/FinalGADT/: Bench.hs
final/Class/: Base.hs  Mul.hs
final/Interpret/: Print.hs
final/src/: Base.hs  Mul.hs
final/src/Example/: Base.hs  Mul.hs
final/src/Example/Base/: Eval.hs  Print.hs
final/src/Example/Mul/: Eval.hs  Print.hs
final/src/Final/: Bench.hs
final/src/Final/Bench/: Eval.hs  Int.hs
final/src/Interpret/: Eval.hs  Print.hs
initial/: default.nix  initial.cabal
initial-bp/: README.md  default.nix  initial-bp.cabal  initial-bp.nix
initial-bp-base-eval/Data/Base/: Eval.hs
initial-bp-base-print/Data/Base/: Print.hs
initial-bp-base-sig/Data/Base/: Type.hsig
initial-bp-base/Data/: Base.hs
initial-bp-mul-eval/Data/Mul/: Eval.hs
initial-bp-mul-print/Data/Mul/: Print.hs
initial-bp-mul-sig/Data/Mul/: Type.hsig
initial-bp/initial-bp-base/: Base.hs
initial-bp/initial-bp-base-eval/Base/: Eval.hs
initial-bp/initial-bp-base-eval/Data/Base/: Eval.hs
initial-bp/initial-bp-base-print/Base/: Print.hs
initial-bp/initial-bp-base-sig/Base/: Type.hsig
initial-bp/initial-bp-eval/Interpret/: Eval.hs
initial-bp/initial-bp-example-base/Example/: Base.hs
initial-bp/initial-bp-example-mul/Example/: Mul.hs
initial-bp/initial-bp-example-term-base-eval/Data/Term/: Eval.hs
initial-bp/initial-bp-example-term-base-eval/Term/: Eval.hs
initial-bp/initial-bp-example-term-base-mul-eval/Data/Term/: Eval.hs
initial-bp/initial-bp-example-term-base-mul-eval/Term/: Eval.hs
initial-bp/initial-bp-example-term-base-mul-print/Data/Term/: Print.hs
initial-bp/initial-bp-example-term-base-mul-print/Term/: Print.hs
initial-bp/initial-bp-example-term-base-mul/Base/: Type.hs
initial-bp/initial-bp-example-term-base-mul/Data/Base/: Type.hs
initial-bp/initial-bp-example-term-base-mul/Data/Mul/: Type.hs
initial-bp/initial-bp-example-term-base-mul/Data/Term/: Type.hs
initial-bp/initial-bp-example-term-base-mul/Mul/: Type.hs
initial-bp/initial-bp-example-term-base-mul/Term/: Type.hs
initial-bp/initial-bp-example-term-base-print/Data/Term/: Print.hs
initial-bp/initial-bp-example-term-base-print/Term/: Print.hs
initial-bp/initial-bp-example-term-base/Base/: Type.hs
initial-bp/initial-bp-example-term-base/Data/Base/: Type.hs
initial-bp/initial-bp-example-term-base/Data/Term/: Type.hs
initial-bp/initial-bp-example-term-base/Term/: Type.hs
initial-bp/initial-bp-mul/: Mul.hs
initial-bp/initial-bp-mul-eval/Mul/: Eval.hs
initial-bp/initial-bp-mul-print/Mul/: Print.hs
initial-bp/initial-bp-mul-sig/Mul/: Type.hsig
initial-bp/initial-bp-mul/Data/: Mul.hs
initial-bp/initial-bp-term/Data/Term/: Type.hsig
initial-bp/initial-bp-term/Term/: Type.hsig
initial-bp/src/InitialBP/: Bench.hs
initial-compose/: ChangeLog.md  README.md  default.nix  initial.cabal  initial.nix
initial-compose/src/: Term.hs
initial-compose/src/Base/: Eval.hs  Type.hs
initial-compose/src/Interpret/: Eval.hs
initial-compose/src/Mul/: Eval.hs  Type.hs
initial-fuse/: initial.cabal
initial-fuse/src/: Base.hs  Mul.hs
initial-fuse/src/Base/: Eval.hs  (+1 more)
initial-no-cps/: initial.cabal
initial-no-cps/src/: Base.hs  Mul.hs
initial/Interpret/: Eval.hs
initial/src/: Base.hs  Mul.hs  Term.hs
initial/src/Base/: Eval.hs  Print.hs  Type.hs
initial/src/Data/: Base.hs  Mul.hs  Term.hs
initial/src/Example/: Base.hs  Mul.hs
initial/src/Example/Term/Base/: Eval.hs  Print.hs
initial/src/Example/Term/BaseMul/: Eval.hs  Print.hs  Type.hs
initial/src/Initial/: Bench.hs
initial/src/Interpret/: Eval.hs  Print.hs
initial/src/Mul/: Eval.hs  Print.hs  Type.hs
src/: TestMe.hs
vanilla/: default.nix  vanilla.cabal  vanilla.nix
vanilla/src/: Term.hs
vanilla/src/Interpret/: Eval.hs  Print.hs
vanilla/src/Vanilla/: Bench.hs
(+20 files in other folders)
