name:                initial-final-bench
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable bench
  main-is:             Main.hs
  ghc-options:         -Wall -O
  build-depends:       base
                     , criterion
                     , vanilla
                     , initial
                     , final
                     , initial-bp
                     , final-bp
  default-language:    Haskell2010
