name:                final-bp
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.1

common options
  ghc-options:         -Wall
  default-language:    Haskell2010

common deps 
  build-depends:       base ^>=4.10

library repr
  import:              options, deps
  hs-source-dirs:      repr
  signatures:          Repr

library final-bp-eval
  import:              options, deps
  hs-source-dirs:      final-bp-eval
  exposed-modules:     Repr

library final-bp-print
  import:              options, deps
  hs-source-dirs:      final-bp-print
  exposed-modules:     Repr

library final-bp-base
  import:              options, deps
  hs-source-dirs:      final-bp-base
  signatures:          Base
  build-depends:       repr

library final-bp-mul
  import:              options, deps
  hs-source-dirs:      final-bp-mul
  signatures:          Mul
  build-depends:       repr

library final-bp-base-eval
  import:              options, deps
  hs-source-dirs:      final-bp-base-eval
  exposed-modules:     Base
  build-depends:       final-bp-eval

library final-bp-base-print
  import:              options, deps
  hs-source-dirs:      final-bp-base-print
  exposed-modules:     Base
  build-depends:       final-bp-print

library final-bp-mul-eval
  import:              options, deps
  hs-source-dirs:      final-bp-mul-eval
  exposed-modules:     Mul
  build-depends:       final-bp-eval

library final-bp-mul-print
  import:              options, deps
  hs-source-dirs:      final-bp-mul-print
  exposed-modules:     Mul
  build-depends:       final-bp-print

library final-bp-example-base
  import:              options, deps
  hs-source-dirs:      final-bp-example-base
  exposed-modules:     Example.Base
  build-depends:       final-bp-base

library final-bp-example-mul
  import:              options, deps
  hs-source-dirs:      final-bp-example-mul
  exposed-modules:     Example.Mul
  build-depends:       final-bp-base
                     , final-bp-mul
                     , final-bp-example-base

library final-bp-example-eval
  import:              options, deps
  hs-source-dirs:      final-bp-example-eval
  exposed-modules:     Example.Eval
  build-depends:       final-bp-eval
                     , final-bp-base-eval
                     , final-bp-mul-eval
                     , final-bp-example-base
                     , final-bp-example-mul

library final-bp-example-print
  import:              options, deps
  hs-source-dirs:      final-bp-example-print
  exposed-modules:     Example.Print
  build-depends:       final-bp-print
                     , final-bp-base-print
                     , final-bp-mul-print
                     , final-bp-example-base
                     , final-bp-example-mul

library
  import:              options, deps
  hs-source-dirs:      src
  exposed-modules:     TestMe
  build-depends:       final-bp-example-eval
                     , final-bp-example-print
