name:                final-bp
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

flag dump
    description: Dump core
    manual: True
    default: False

library repr
  hs-source-dirs:      repr
  signatures:          Repr
  build-depends:       base ^>=4.10
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-eval
  hs-source-dirs:      final-bp-eval
  exposed-modules:     Repr
  build-depends:       base ^>=4.10
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-print
  hs-source-dirs:      final-bp-print
  exposed-modules:     Repr
  build-depends:       base ^>=4.10
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-base
  hs-source-dirs:      final-bp-base
  signatures:          Base
  build-depends:       base ^>=4.10
                     , repr
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-mul
  hs-source-dirs:      final-bp-mul
  signatures:          Mul
  build-depends:       base ^>=4.10
                     , repr
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-base-eval
  hs-source-dirs:      final-bp-base-eval
  exposed-modules:     Base
  build-depends:       base ^>=4.10
                     , final-bp-eval
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-base-print
  hs-source-dirs:      final-bp-base-print
  exposed-modules:     Base
  build-depends:       base ^>=4.10
                     , final-bp-print
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-mul-eval
  hs-source-dirs:      final-bp-mul-eval
  exposed-modules:     Mul
  build-depends:       base ^>=4.10
                     , final-bp-eval
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-mul-print
  hs-source-dirs:      final-bp-mul-print
  exposed-modules:     Mul
  build-depends:       base ^>=4.10
                     , final-bp-print
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-example-base
  hs-source-dirs:      final-bp-example-base
  exposed-modules:     Example.Base
  build-depends:       base ^>=4.10
                     , final-bp-base
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-example-mul
  hs-source-dirs:      final-bp-example-mul
  exposed-modules:     Example.Mul
  build-depends:       base ^>=4.10
                     , final-bp-base
                     , final-bp-mul
                     , final-bp-example-base
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-example-eval
  hs-source-dirs:      final-bp-example-eval
  exposed-modules:     Example.Eval
  build-depends:       base ^>=4.10
                     , final-bp-eval
                     , final-bp-base-eval
                     , final-bp-mul-eval
                     , final-bp-example-base
                     , final-bp-example-mul
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library final-bp-example-print
  hs-source-dirs:      final-bp-example-print
  exposed-modules:     Example.Print
  build-depends:       base ^>=4.10
                     , final-bp-print
                     , final-bp-base-print
                     , final-bp-mul-print
                     , final-bp-example-base
                     , final-bp-example-mul
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     TestMe
  build-depends:       base ^>=4.10
                     , final-bp-example-eval
                     , final-bp-example-print
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010
