name:                final
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2

flag dump
    description: Dump core
    manual: True
    default: False

library
  exposed-modules:     Base
                     , Mul
                     , Interpret.Eval
                     , Interpret.Print
                     , Example.Base
                     , Example.Base.Eval
                     , Example.Base.Print
                     , Example.Mul
                     , Example.Mul.Eval
                     , Example.Mul.Print
                     , Final.Bench
  build-depends:       base >=4.10 && <4.11
                     , deepseq
  hs-source-dirs:      src
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010
