name:                initial-bp
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library initial-bp-eval
  exposed-modules:     Interpret.Eval
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      initial-bp-eval
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-print
  exposed-modules:     Interpret.Print
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      initial-bp-print
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-term
  signatures:          Term.Type
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      initial-bp-term
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-base-sig
  signatures:          Base.Type
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-term 
                     , lens
  hs-source-dirs:      initial-bp-base-sig
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-base
  exposed-modules:     Base
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-base-sig
                     , lens
  hs-source-dirs:      initial-bp-base
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-base-eval
  exposed-modules:     Base.Eval
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-base-sig
                     , initial-bp-term
                     , initial-bp-eval
                     , lens
  hs-source-dirs:      initial-bp-base-eval
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-base-print
  exposed-modules:     Base.Print
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-base-sig
                     , initial-bp-term
                     , initial-bp-print
                     , lens
  hs-source-dirs:      initial-bp-base-print
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-mul-sig
  signatures:          Mul.Type
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-term 
                     , lens
  hs-source-dirs:      initial-bp-mul-sig
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-mul
  exposed-modules:     Mul
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-mul-sig
                     , lens
  hs-source-dirs:      initial-bp-mul
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-mul-eval
  exposed-modules:     Mul.Eval
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-term
                     , initial-bp-base-sig
                     , initial-bp-mul-sig
                     , initial-bp-eval
                     , lens
  hs-source-dirs:      initial-bp-mul-eval
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-mul-print
  exposed-modules:     Mul.Print
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-term
                     , initial-bp-mul-sig
                     , initial-bp-print
                     , lens
  hs-source-dirs:      initial-bp-mul-print
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-example-base
  exposed-modules:     Example.Base
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-base
                     , lens
  hs-source-dirs:      initial-bp-example-base
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-example-mul
  exposed-modules:     Example.Mul
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-example-base
                     , initial-bp-base
                     , initial-bp-mul
                     , lens
  hs-source-dirs:      initial-bp-example-mul
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-example-term-base
  exposed-modules:     Term.Type
                     , Base.Type
  build-depends:       base >=4.10 && <4.11
                     , lens
  hs-source-dirs:      initial-bp-example-term-base
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-example-term-base-eval
  exposed-modules:     Term.Eval
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-example-term-base
                     , initial-bp-eval
                     , initial-bp-base-eval
  hs-source-dirs:      initial-bp-example-term-base-eval
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-example-term-base-print
  exposed-modules:     Term.Print
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-example-term-base
                     , initial-bp-print
                     , initial-bp-base-print
  hs-source-dirs:      initial-bp-example-term-base-print
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-example-term-base-mul
  exposed-modules:     Term.Type
                     , Base.Type
                     , Mul.Type
  build-depends:       base >=4.10 && <4.11
                     , lens
  hs-source-dirs:      initial-bp-example-term-base-mul
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-example-term-base-mul-eval
  exposed-modules:     Term.Eval
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-example-term-base-mul
                     , initial-bp-eval
                     , initial-bp-base-eval
                     , initial-bp-mul-eval
                     , lens
  hs-source-dirs:      initial-bp-example-term-base-mul-eval
  ghc-options:         -Wall
  default-language:    Haskell2010

library initial-bp-example-term-base-mul-print
  exposed-modules:     Term.Print
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-example-term-base-mul
                     , initial-bp-print
                     , initial-bp-base-print
                     , initial-bp-mul-print
                     , lens
  hs-source-dirs:      initial-bp-example-term-base-mul-print
  ghc-options:         -Wall
  default-language:    Haskell2010

library
  exposed-modules:     TestMe
  build-depends:       base >=4.10 && <4.11
                     , initial-bp-example-base
                     , initial-bp-example-mul
                     , initial-bp-example-term-base-mul
                     , initial-bp-example-term-base-mul-eval
                     , initial-bp-example-term-base-mul-print
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
