name:                initial-bp
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

flag dump
    description: Dump core
    manual: True
    default: False

library initial-bp-eval
  hs-source-dirs:      initial-bp-eval
  exposed-modules:     Interpret.Eval
  build-depends:       base ^>=4.10
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-print
  hs-source-dirs:      initial-bp-print
  exposed-modules:     Interpret.Print
  build-depends:       base ^>=4.10
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-term
  hs-source-dirs:      initial-bp-term
  signatures:          Term.Type
  build-depends:       base ^>=4.10
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-base-sig
  hs-source-dirs:      initial-bp-base-sig
  signatures:          Base.Type
  build-depends:       base ^>=4.10
                     , initial-bp-term 
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-base
  hs-source-dirs:      initial-bp-base
  exposed-modules:     Base
  build-depends:       base ^>=4.10
                     , initial-bp-base-sig
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-base-eval
  hs-source-dirs:      initial-bp-base-eval
  exposed-modules:     Base.Eval
  build-depends:       base ^>=4.10
                     , initial-bp-base-sig
                     , initial-bp-term
                     , initial-bp-eval
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-base-print
  hs-source-dirs:      initial-bp-base-print
  exposed-modules:     Base.Print
  build-depends:       base ^>=4.10
                     , initial-bp-base-sig
                     , initial-bp-term
                     , initial-bp-print
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-mul-sig
  hs-source-dirs:      initial-bp-mul-sig
  signatures:          Mul.Type
  build-depends:       base ^>=4.10
                     , initial-bp-term 
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-mul
  hs-source-dirs:      initial-bp-mul
  exposed-modules:     Mul
  build-depends:       base ^>=4.10
                     , initial-bp-mul-sig
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-mul-eval
  hs-source-dirs:      initial-bp-mul-eval
  exposed-modules:     Mul.Eval
  build-depends:       base ^>=4.10
                     , initial-bp-term
                     , initial-bp-base-sig
                     , initial-bp-mul-sig
                     , initial-bp-eval
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-mul-print
  hs-source-dirs:      initial-bp-mul-print
  exposed-modules:     Mul.Print
  build-depends:       base ^>=4.10
                     , initial-bp-term
                     , initial-bp-mul-sig
                     , initial-bp-print
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-example-base
  hs-source-dirs:      initial-bp-example-base
  exposed-modules:     Example.Base
  build-depends:       base ^>=4.10
                     , initial-bp-base
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-example-mul
  hs-source-dirs:      initial-bp-example-mul
  exposed-modules:     Example.Mul
  build-depends:       base ^>=4.10
                     , initial-bp-example-base
                     , initial-bp-base
                     , initial-bp-mul
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-example-term-base
  hs-source-dirs:      initial-bp-example-term-base
  exposed-modules:     Term.Type
                     , Base.Type
  build-depends:       base ^>=4.10
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-example-term-base-eval
  hs-source-dirs:      initial-bp-example-term-base-eval
  exposed-modules:     Term.Eval
  build-depends:       base ^>=4.10
                     , initial-bp-example-term-base
                     , initial-bp-eval
                     , initial-bp-base-eval
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-example-term-base-print
  hs-source-dirs:      initial-bp-example-term-base-print
  exposed-modules:     Term.Print
  build-depends:       base ^>=4.10
                     , initial-bp-example-term-base
                     , initial-bp-print
                     , initial-bp-base-print
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-example-term-base-mul
  hs-source-dirs:      initial-bp-example-term-base-mul
  exposed-modules:     Term.Type
                     , Base.Type
                     , Mul.Type
  build-depends:       base ^>=4.10
                     , lens
                     , deepseq
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-example-term-base-mul-eval
  hs-source-dirs:      initial-bp-example-term-base-mul-eval
  exposed-modules:     Term.Eval
  build-depends:       base ^>=4.10
                     , initial-bp-example-term-base-mul
                     , initial-bp-eval
                     , initial-bp-base-eval
                     , initial-bp-mul-eval
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library initial-bp-example-term-base-mul-print
  hs-source-dirs:      initial-bp-example-term-base-mul-print
  exposed-modules:     Term.Print
  build-depends:       base ^>=4.10
                     , initial-bp-example-term-base-mul
                     , initial-bp-print
                     , initial-bp-base-print
                     , initial-bp-mul-print
                     , lens
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     InitialBP.Bench
  build-depends:       base ^>=4.10
                     , initial-bp-example-term-base-mul
                     , initial-bp-eval
                     , initial-bp-base-eval
                     , initial-bp-mul-eval
  ghc-options:         -Wall -O
  if flag(dump)
    ghc-options:         -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  default-language:    Haskell2010
